[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tpux"
authors = [
  { name="Shin", email="shin@yixiaoer.sg" },
]
# we cannot use `dynamic` here, because it doesn't work on Python 3.8
version = "0.1.5"
dependencies = [
  "psutil",
  "fabric",
]
description = "A set of Python scripts that makes your experience on TPU better"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Distributed Computing',
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/yixiaoer/tpux"
Issues = "https://github.com/yixiaoer/tpux/issues"

[project.scripts]
tpux = "tpux.cli:main"
podrun = "tpux.podrun:main"
